Made changes to the database access and added content to the readme file

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://ian:babairvin@touchinspirationcluster.qx36e45.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://test_user:testuser101@touchinspirationcluster.qx36e45.mongodb.net/?retryWrites=true&w=majority
