--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "touch-inspiration-backend-interview",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Ian Mugenya",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
